[package]
name    = "tic-tac-toe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
codegen-units    = 1
panic            = 'abort'
incremental      = false
overflow-checks  = true

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[dependencies]
cosmwasm-schema = "1.1.9"
cosmwasm-std    = "1.1.9"
cw-storage-plus = { version = "1.0.1", features = ["iterator"] }
serde           = "1.0.152"
thiserror       = "1.0.38"

[dev-dependencies]
anyhow = "1.0.68"
cw-multi-test = "0.16.2"
